--- a/Win/.gitconfig
+++ b/Win/.gitconfig
@@ -7,9 +7,16 @@
 	editor       = ~/npp.sh
 	quotepath    = false
 	autocrlf     = true
+	askpass      =
 
 [color]
 	ui = true
 
 [alias]
 	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+
+[credential "helperselector"]
+	selected = <no helper>
+
+[credential]
+	helper = cache
