--- a/Linux/.gitconfig
+++ b/Linux/.gitconfig
@@ -4,7 +4,7 @@
 
 [core]
 	excludesfile = ~/.gitignore_global
-	editor       = nano
+	editor       = kate --startanon 2>/dev/null
 	autocrlf     = input
 
 [push]
