--- a/Win/.gitconfig
+++ b/Win/.gitconfig
@@ -16,7 +16,8 @@
 	ui = true
 
 [alias]
-	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+	ignore  = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+	rclone  = clone --recurse-submodules
 
 [credential "helperselector"]
 	selected = <no helper>
