--- a/Linux/.gitconfig
+++ b/Linux/.gitconfig
@@ -16,3 +16,4 @@
 [alias]
 	ignore  = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
 	rclone  = clone --recurse-submodules
+	rpull   = pull  --recurse-submodules
