add alias rpush - push with submodules

--- a/Linux/.gitconfig
+++ b/Linux/.gitconfig
@@ -17,3 +17,4 @@
 	ignore  = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
 	rclone  = clone --recurse-submodules
 	rpull   = pull  --recurse-submodules
+	rpush   = push  --recurse-submodules=on-demand
