add alias rdiff - diff with submodules

--- a/Win/.gitconfig
+++ b/Win/.gitconfig
@@ -15,11 +15,15 @@
 [color]
 	ui = true
 
+[diff]
+	submodule = log
+
 [alias]
 	ignore  = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
 	rclone  = clone --recurse-submodules
 	rpull   = pull  --recurse-submodules
 	rpush   = push  --recurse-submodules=on-demand
+	rdiff   = diff  --submodule=diff
 
 [credential "helperselector"]
 	selected = <no helper>
