--- a/Linux/.gitconfig
+++ b/Linux/.gitconfig
@@ -13,8 +13,12 @@
 [push]
 	default = simple
 
+[diff]
+	submodule = log
+
 [alias]
 	ignore  = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
 	rclone  = clone --recurse-submodules
 	rpull   = pull  --recurse-submodules
 	rpush   = push  --recurse-submodules=on-demand
+	rdiff   = diff  --submodule=diff
