--- a/Win/.gitconfig
+++ b/Win/.gitconfig
@@ -24,6 +24,7 @@
 	rpull   = pull  --recurse-submodules
 	rpush   = push  --recurse-submodules=on-demand
 	rdiff   = diff  --submodule=diff
+	rupdate = submodule update --init --recursive
 
 [credential "helperselector"]
 	selected = <no helper>
